# theragraph-rust

./: .ci-trigger  .env.example  .env.production.example  Cargo.toml  Dockerfile  QUICKSTART.md  README.md  RECOMMENDATION_SYSTEM.md  docker-compose.yml
.github/workflows/: publish-consumer.yml  publish-image.yml
.sqlx/: query-0a59546c8bde133a2ba756b392a76609c60ded717d7322d7af32b07602742700.json  query-0e07f37091b40f2fc2b822059d09eadf6060d7b6ce97e4e5293e6ccca97fc414.json  query-14c9fd7792166038075973dd8644d7d77de80f74cefd037b2f5ad4c9a2b7bb4c.json  query-424458b89bfbfb2c781828d32a7c5c9fc50c3322a582ed4c2f4db3de8e525f0d.json  query-609ac1422288921fd38390dd8dfcad2dae24dec41ff8ec85aa29d7ee2c7a1db7.json  query-dea2352199e3c92d891ba5029a96fda60648c3d0835a3aa13314e19e06720334.json  query-e0d36482655ff88049e127740a7331054bbff928af4a8629d253c8b6fa77863d.json
docs/: graph-ingest.md
examples/: consumer_http.rs  consumer_nebula.rs  consumer_skeleton.rs  sample-events.jsonl
migrations/: 001_create_indexer_state.sql  002_create_recommendation_tables.sql  003_add_feed_type_to_recommendation_cache.sql
scripts/: healthcheck.sh  run-debug.sh  wait-for-kafka.sh
src/: api.rs  config.rs  database.rs  error.rs  event_processor.rs  events.rs  kafka.rs  lib.rs  main.rs
src/indexer/: friend.rs  mod.rs  thera_friends.rs  thera_social.rs
src/recommendation/: engine.rs  features.rs  graph_client.rs  graph_schema.ngql  metrics.rs  mod.rs  preferences.rs  updater.rs
target_docker/: .rustc_info.json
target_docker/debug/.fingerprint/Inflector-19f6602b8d1e8bf2/: lib-inflector  lib-inflector.json
target_docker/debug/.fingerprint/Inflector-56289de257da30ed/: lib-inflector  lib-inflector.json
target_docker/debug/.fingerprint/adler2-1564889e441177fd/: lib-adler2  lib-adler2.json
target_docker/debug/.fingerprint/aes-03bd7f8e68287047/: lib-aes  lib-aes.json
target_docker/debug/.fingerprint/ahash-59939ec75be9aaa2/: build-script-build-script-build  build-script-build-script-build.json
target_docker/debug/.fingerprint/ahash-5d644f7ffa4d5b04/: lib-ahash  lib-ahash.json
target_docker/debug/.fingerprint/ahash-bdcc7f4e2fc6001d/: run-build-script-build-script-build  run-build-script-build-script-build.json
target_docker/debug/.fingerprint/aho-corasick-25a35edbb23f5ce8/: lib-aho_corasick  lib-aho_corasick.json
target_docker/debug/.fingerprint/allocator-api2-302c8aaff85fe901/: lib-allocator_api2  lib-allocator_api2.json
target_docker/debug/.fingerprint/anyhow-514e94604e57560e/: lib-anyhow  lib-anyhow.json
target_docker/debug/.fingerprint/anyhow-5eeff344f551b50f/: run-build-script-build-script-build  run-build-script-build-script-build.json
target_docker/debug/.fingerprint/anyhow-e1830ac0a1147c61/: build-script-build-script-build  build-script-build-script-build.json
target_docker/debug/examples/: consumer_nebula-649c49c551a3591e.d  consumer_nebula-ac7cd262095d547d.d
tests/: nebula_integration.rs
(+1142 files in other folders)
