[package]
name = "theragraph-engine"
version = "0.2.0"
edition = "2021"
description = "TheraGraph blockchain indexer and recommendation engine"
authors = ["TheraGraph Team"]
license = "MIT"
repository = "https://github.com/theragraph/theragraph-rust"
rust-version = "1.75"

[lib]
name = "theragraph"
path = "src/lib.rs"


[dependencies]
# Async runtime - tokio with all features for production
tokio = { version = "1.35", features = ["full", "tracing"] }
tokio-util = { version = "0.7", features = ["rt"] }

# Ethereum - ethers with websocket support and TLS
ethers = { version = "2.0", features = ["ws", "rustls"] }
ethers-providers = "2.0"
ethers-core = "2.0"

# Kafka - with SSL/SASL for secure connections
rdkafka = { version = "0.36", features = ["cmake-build", "ssl", "sasl"] }

# Database - sqlx with connection pooling and migrations
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "json", "chrono", "uuid", "migrate"] }

# Web framework - axum with full features
axum = { version = "0.7", features = ["json", "query", "tracing"] }
tower = { version = "0.4", features = ["timeout", "limit", "load-shed"] }
tower-http = { version = "0.5", features = ["cors", "trace", "timeout", "compression-gzip", "request-id"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# HTTP client with retry and timeout
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Logging and observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
tracing-opentelemetry = { version = "0.22", optional = true }
opentelemetry = { version = "0.21", optional = true }
opentelemetry-otlp = { version = "0.14", optional = true }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Environment and configuration
dotenvy = "0.15"
config = "0.14"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
uuid = { version = "1.0", features = ["v4", "v5", "serde"] }
rand = "0.8"
once_cell = "1.19"
tempfile = "3.8"

# Andrew Gallant + Niko Matsakis: Rayon for data parallelism
rayon = "1.8"

# Metrics
metrics = "0.22"
metrics-exporter-prometheus = { version = "0.13", optional = true }

# Graceful shutdown
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
log = "0.4.29"

[features]
default = []
telemetry = ["tracing-opentelemetry", "opentelemetry", "opentelemetry-otlp"]
metrics = ["metrics-exporter-prometheus"]
full = ["telemetry", "metrics"]

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.5"
testcontainers = "0.15"
tempfile = "3.8"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

[profile.release-debug]
inherits = "release"
debug = true
strip = false
